--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
         <input
           type="text"
+          value="text"
           name="input-bar"
           placeholder="Create a new todo..."
           id="input-area"
